test_scores/negative_dimers/features/P51948.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P51948.pkl.xz